# PaperMind

MODULAR-RAG-MCP-SERVER-clean-start/: .gitignore  DEV_SPEC.md  README.md  main.py  pyproject.toml  requirements.txt
MODULAR-RAG-MCP-SERVER-clean-start/.github/skills/checkpoint/: SKILL.md
MODULAR-RAG-MCP-SERVER-clean-start/.github/skills/dev-workflow/: SKILL.md
MODULAR-RAG-MCP-SERVER-clean-start/.github/skills/implement/: SKILL.md
MODULAR-RAG-MCP-SERVER-clean-start/.github/skills/progress-tracker/: SKILL.md
MODULAR-RAG-MCP-SERVER-clean-start/.github/skills/spec-sync/: .gitignore  SKILL.md  sync_spec.py
MODULAR-RAG-MCP-SERVER-clean-start/.github/skills/testing-stage/: SKILL.md
MODULAR-RAG-MCP-SERVER-clean-start/config/: settings.yaml
MODULAR-RAG-MCP-SERVER-clean-start/config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
MODULAR-RAG-MCP-SERVER-clean-start/src/core/: settings.py
MODULAR-RAG-MCP-SERVER-clean-start/src/libs/llm/: azure_vision_llm.py
MODULAR-RAG-MCP-SERVER-clean-start/src/observability/: logger.py
MODULAR-RAG-MCP-SERVER-clean-start/tests/: conftest.py
MODULAR-RAG-MCP-SERVER-clean-start/tests/fixtures/sample_documents/: sample.txt
MODULAR-RAG-MCP-SERVER-clean-start/tests/unit/: test_config_loading.py  test_smoke_imports.py
MODULAR-RAG-MCP-SERVER-main/: .gitignore  README.md  pyproject.toml
MODULAR-RAG-MCP-SERVER-main/config/: settings.yaml
MODULAR-RAG-MCP-SERVER-main/src/ingestion/: pipeline.py
MODULAR-RAG-MCP-SERVER-main/tests/unit/: test_image_captioner.py  test_image_filter.py  test_image_loader.py  (+2 more)
(+17 files in other folders)
