[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-rag-mcp-server"
version = "0.1.0"
description = "Modular RAG MCP Server"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "unit: fast isolated unit tests",
  "integration: tests with real local dependencies",
  "e2e: end-to-end tests",
  "slow: long-running tests",
]
